[gd_scene load_steps=51 format=3]

[ext_resource type="Script" path="res://TestScene3/Scripts/Enemies/BigSlimeBoss.gd" id="1_835bh"]
[ext_resource type="Texture2D" uid="uid://857ix1m1uvg7" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack1.png" id="2_gdeni"]
[ext_resource type="Texture2D" uid="uid://c328yp2edr8bg" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack2.png" id="3_pfoti"]
[ext_resource type="Texture2D" uid="uid://b1n7yexfu7j2" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack3.png" id="4_phttl"]
[ext_resource type="Texture2D" uid="uid://2owxp23g6m6j" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack4.png" id="5_la2df"]
[ext_resource type="Texture2D" uid="uid://dqqrcbkjnol4t" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack5.png" id="6_m432e"]
[ext_resource type="Texture2D" uid="uid://dciop3wiowa34" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack6.png" id="7_5nebs"]
[ext_resource type="Texture2D" uid="uid://3kovcub7mxo7" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack7.png" id="8_sfrat"]
[ext_resource type="Texture2D" uid="uid://23js5nau3eer" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack8.png" id="9_j4txp"]
[ext_resource type="Texture2D" uid="uid://vmo43jarjbr4" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack9.png" id="10_y737q"]
[ext_resource type="Texture2D" uid="uid://go0qhdbx4n26" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack10.png" id="11_e3ogk"]
[ext_resource type="Texture2D" uid="uid://cqc4qtnyw3mh1" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack11.png" id="12_dh4il"]
[ext_resource type="Texture2D" uid="uid://bdubp81hrnr1s" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack12.png" id="13_dukwu"]
[ext_resource type="Texture2D" uid="uid://ei1sgmq71ipm" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack13.png" id="14_q2a2t"]
[ext_resource type="Texture2D" uid="uid://dp7fv52wct3e4" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Attack/png/SlimeBlue_Attack14.png" id="15_f6w7n"]
[ext_resource type="Texture2D" uid="uid://cb5mhjgv6xjud" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death1.png" id="16_4h74q"]
[ext_resource type="Texture2D" uid="uid://ba01ve7ntjvut" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death2.png" id="17_5e86y"]
[ext_resource type="Texture2D" uid="uid://p4l2ftanguko" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death3.png" id="18_xlm7m"]
[ext_resource type="Texture2D" uid="uid://cvv1it13vj3ug" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death4.png" id="19_nmdlv"]
[ext_resource type="Texture2D" uid="uid://cghoeul7aawqq" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death5.png" id="20_lj48e"]
[ext_resource type="Texture2D" uid="uid://b8clcogmjdkue" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death6.png" id="21_5ioq5"]
[ext_resource type="Texture2D" uid="uid://cw0u58tf5ravf" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death7.png" id="22_yvisf"]
[ext_resource type="Texture2D" uid="uid://n4yte56ccfww" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death8.png" id="23_r6jp1"]
[ext_resource type="Texture2D" uid="uid://xtn52sqmqfwk" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death9.png" id="24_kt67s"]
[ext_resource type="Texture2D" uid="uid://sl7qe8ny6fgh" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death10.png" id="25_q523y"]
[ext_resource type="Texture2D" uid="uid://s7mlirm7qd5a" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Death/png/SlimeBlue_Death11.png" id="26_ji6bt"]
[ext_resource type="Texture2D" uid="uid://c4pfxx4ndlhh2" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle1.png" id="27_boido"]
[ext_resource type="Texture2D" uid="uid://cn38s14b5dtoh" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle2.png" id="28_o4t3x"]
[ext_resource type="Texture2D" uid="uid://ddesqvoxcytaj" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle3.png" id="29_vnvp0"]
[ext_resource type="Texture2D" uid="uid://jeu57vn7xj88" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Idle/png/SlimeBlue_Idle4.png" id="30_ujfnq"]
[ext_resource type="Texture2D" uid="uid://bg7dpdjc8xp1g" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump2.png" id="31_eckgi"]
[ext_resource type="Texture2D" uid="uid://cq6pb7lo708ls" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump15.png" id="32_uir7w"]
[ext_resource type="Texture2D" uid="uid://d5ct3waohuye" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump3.png" id="33_ae8cl"]
[ext_resource type="Texture2D" uid="uid://ba0yiptbxxg35" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump14.png" id="34_pchqf"]
[ext_resource type="Texture2D" uid="uid://d0um4k5pd6vg0" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump5.png" id="35_4baqc"]
[ext_resource type="Texture2D" uid="uid://blm0pj45qaqx7" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump4.png" id="35_x0ykh"]
[ext_resource type="Texture2D" uid="uid://b1h5km0aq263g" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump6.png" id="36_h6skf"]
[ext_resource type="Script" path="res://TestScene3/Scripts/HitBox.gd" id="36_xoooc"]
[ext_resource type="Texture2D" uid="uid://dd5u8vmk5xt3f" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump7.png" id="37_ipqwo"]
[ext_resource type="Script" path="res://TestScene3/Scripts/HurtBox.gd" id="37_wlfwu"]
[ext_resource type="Texture2D" uid="uid://cfobxq8nbyib5" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump8.png" id="38_esbdj"]
[ext_resource type="Texture2D" uid="uid://bbw0mm3dt6i2g" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump9.png" id="39_lovnc"]
[ext_resource type="Texture2D" uid="uid://b01gukqy0ynwd" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump10.png" id="40_87oqp"]
[ext_resource type="Texture2D" uid="uid://dkojtciab0oy3" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump11.png" id="41_akqbe"]
[ext_resource type="Texture2D" uid="uid://bc67bsocgftt5" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump12.png" id="42_k8118"]
[ext_resource type="Texture2D" uid="uid://dvg6ir7xvcl11" path="res://TestScene3/Art/Enemy/Slime/SlimeAnimations/Blue/Jump/png/SlimeBlue_Jump13.png" id="43_cvdp2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w0m1v"]
size = Vector2(18.5, 11.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7353"]
size = Vector2(14.4, 8.2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lewee"]
size = Vector2(18, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_nc1h0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gdeni")
}, {
"duration": 1.0,
"texture": ExtResource("3_pfoti")
}, {
"duration": 1.0,
"texture": ExtResource("4_phttl")
}, {
"duration": 1.0,
"texture": ExtResource("5_la2df")
}, {
"duration": 1.0,
"texture": ExtResource("6_m432e")
}, {
"duration": 1.0,
"texture": ExtResource("7_5nebs")
}, {
"duration": 1.0,
"texture": ExtResource("8_sfrat")
}, {
"duration": 1.0,
"texture": ExtResource("9_j4txp")
}, {
"duration": 1.0,
"texture": ExtResource("10_y737q")
}, {
"duration": 1.0,
"texture": ExtResource("11_e3ogk")
}, {
"duration": 1.0,
"texture": ExtResource("12_dh4il")
}, {
"duration": 1.0,
"texture": ExtResource("13_dukwu")
}, {
"duration": 1.0,
"texture": ExtResource("14_q2a2t")
}, {
"duration": 1.0,
"texture": ExtResource("15_f6w7n")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_4h74q")
}, {
"duration": 1.0,
"texture": ExtResource("17_5e86y")
}, {
"duration": 1.0,
"texture": ExtResource("18_xlm7m")
}, {
"duration": 1.0,
"texture": ExtResource("19_nmdlv")
}, {
"duration": 1.0,
"texture": ExtResource("20_lj48e")
}, {
"duration": 1.0,
"texture": ExtResource("21_5ioq5")
}, {
"duration": 1.0,
"texture": ExtResource("22_yvisf")
}, {
"duration": 1.0,
"texture": ExtResource("23_r6jp1")
}, {
"duration": 1.0,
"texture": ExtResource("24_kt67s")
}, {
"duration": 1.0,
"texture": ExtResource("25_q523y")
}, {
"duration": 1.0,
"texture": ExtResource("26_ji6bt")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_boido")
}, {
"duration": 1.0,
"texture": ExtResource("28_o4t3x")
}, {
"duration": 1.0,
"texture": ExtResource("29_vnvp0")
}, {
"duration": 1.0,
"texture": ExtResource("30_ujfnq")
}],
"loop": true,
"name": &"IdleOrMove",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_ae8cl")
}, {
"duration": 1.0,
"texture": ExtResource("35_x0ykh")
}, {
"duration": 1.0,
"texture": ExtResource("35_4baqc")
}, {
"duration": 1.0,
"texture": ExtResource("36_h6skf")
}, {
"duration": 1.0,
"texture": ExtResource("37_ipqwo")
}, {
"duration": 1.0,
"texture": ExtResource("38_esbdj")
}, {
"duration": 1.0,
"texture": ExtResource("39_lovnc")
}, {
"duration": 1.0,
"texture": ExtResource("40_87oqp")
}, {
"duration": 1.0,
"texture": ExtResource("41_akqbe")
}, {
"duration": 1.0,
"texture": ExtResource("42_k8118")
}, {
"duration": 1.0,
"texture": ExtResource("43_cvdp2")
}, {
"duration": 1.0,
"texture": ExtResource("34_pchqf")
}, {
"duration": 1.1,
"texture": ExtResource("33_ae8cl")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_eckgi")
}, {
"duration": 1.0,
"texture": ExtResource("32_uir7w")
}, {
"duration": 1.0,
"texture": ExtResource("33_ae8cl")
}, {
"duration": 1.0,
"texture": ExtResource("34_pchqf")
}, {
"duration": 1.0,
"texture": ExtResource("35_x0ykh")
}],
"loop": false,
"name": &"TakeDamage",
"speed": 7.0
}]

[node name="Enemy5" type="CharacterBody2D"]
modulate = Color(0.760784, 0.682353, 0.368627, 1)
position = Vector2(235, 347)
scale = Vector2(5, 5)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_835bh")
movement_speed = 0
maxhealth = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w0m1v")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(-1.1, -15.2)
collision_layer = 16
collision_mask = 0
script = ExtResource("36_xoooc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1.1, 16.1)
shape = SubResource("RectangleShape2D_k7353")

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2(-1.1, -15.2)
collision_layer = 8
collision_mask = 4
script = ExtResource("37_wlfwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 15.5)
shape = SubResource("RectangleShape2D_lewee")

[node name="DisableTimer" type="Timer" parent="HurtBox"]

[node name="TransformAdjustment" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TransformAdjustment"]
position = Vector2(-0.4, -14.9)
sprite_frames = SubResource("SpriteFrames_nc1h0")
animation = &"Jump"
frame_progress = 0.248772

[node name="SpawnEnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HurtBox/DisableTimer" to="HurtBox" method="_on_disable_timer_timeout"]
[connection signal="timeout" from="SpawnEnemyTimer" to="." method="_on_spawn_enemy_timer_timeout"]
